chat functionality fix and modal change

--- a/server/.env.example
+++ b/server/.env.example
@@ -6,3 +6,6 @@ CLIENT_URL=http://localhost:5173
 
 # OpenRouter API key for RAG chat (get one at https://openrouter.ai/keys)
 OPENROUTER_API_KEY=your-openrouter-api-key
+
+# Set to 0 if behind a corporate proxy with self-signed TLS certificates
+# NODE_TLS_REJECT_UNAUTHORIZED=0
