--- a/server/.env.example
+++ b/server/.env.example
@@ -9,9 +9,9 @@ OPENROUTER_API_KEY=your-openrouter-api-key
 
 # VAPID keys for Web Push Notifications
 # Generate with: npx web-push generate-vapid-keys
-VAPID_PUBLIC_KEY=BOF9kI9Fu7opRa9sawBI6OSqN8yxRH0FgDG_R-eJlvthC8U2RBszEgSU-7jkdYONotxMJUf0XIdqlSF8fkqAZUU
-VAPID_PRIVATE_KEY=kHJflioaFu0FWKj5BW5P4X3ejtFyqO7Efv5DccQ8FPs
-VAPID_SUBJECT=mailto:keshav.jha@dunnhumby.com
+VAPID_PUBLIC_KEY=your-vapid-public-key
+VAPID_PRIVATE_KEY=your-vapid-private-key
+VAPID_SUBJECT=mailto:admin@dhsync.local
 
 # Set to 0 if behind a corporate proxy with self-signed TLS certificates
 # NODE_TLS_REJECT_UNAUTHORIZED=0
