--- a/server/.env.example
+++ b/server/.env.example
@@ -5,7 +5,7 @@ JWT_EXPIRES_IN=7d
 CLIENT_URL=http://localhost:5173
 
 # LLM Provider switch: "openrouter" or "nvidia" (default: nvidia)
-LLM_PROVIDER=nvidia
+LLM_PROVIDER=race
 
 # OpenRouter API key (get one at https://openrouter.ai/keys)
 OPENROUTER_API_KEY=your-openrouter-api-key
